<resources>
    <string name="app_name">Smart Pantry Manager</string>
    <string name="title_login">Welcome to Smart Pantry</string>
    <string name="title_pantry">My Pantry</string>
    <string name="title_add_edit_ingredient">Add / Edit Ingredient</string>
    <string name="title_recipes">Suggested Recipes</string>
    <string name="title_recipe_detail">Recipe Details</string>
    <string name="title_settings">Settings</string>
    
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    
    <string name="btn_add_ingredient">+ Add Ingredient</string>
    <string name="btn_suggested_recipes">View Suggested Recipes</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_save_ingredient">Save Ingredient</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_back_to_pantry">Back to Pantry</string>
    
    <string name="hint_ingredient_name">Ingredient Name (e.g. Tomato)</string>
    <string name="hint_ingredient_quantity">Quantity (e.g. 2)</string>
    <string name="hint_expiry_date">Expiry Date (dd/mm/yyyy)</string>
    
    <string name="switch_dark_mode">Dark Mode</string>
    
    <string-array name="metric_units">
        <item>g</item>
        <item>kg</item>
        <item>ml</item>
        <item>L</item>
        <item>pieces</item>
    </string-array>
</resources>